--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.269.0",
     "mongoose": "^7.4.5",
     "next": "13.4.19",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
